# text-to-morse

./: CMakeLists.txt  README.md
include/: args.h  encoder.h  morse.h  nsamples.h  render.h  space.h  timing.h  tone.h  version.h.in
src/: args.c  encoder.c  morse.c  nsamples.c  render.c  space.c  text-to-morse.c  timing.c  tone.c
